--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "jano",
-  "version": "2.1.0",
-  "description": "Hyper staff",
   "main": "jano.js",
   "scripts": {
     "start": "node jano.js"
   },
   "dependencies": {
-    "discord.js": "11.4.2",
     "express": "^4.17.1",
-    "ytdl-core": "^0.29.0"
+    "discord.js": "^11.5.1"
   },
   "engines": {
-    "node": "8.x"
-  }
+    "node": "10.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
