--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "jano",
   "version": "2.1.0",
-  "description": "jano",
   "main": "jano.js",
   "scripts": {
     "start": "node jano.js"
@@ -9,9 +7,10 @@
   "dependencies": {
     "discord.js": "11.4.2",
     "express": "^4.17.1",
-    "ytdl-core": "^0.29.0"
+    "ytdl-core": "^0.29.0",
+    "discord.js-v12": "^12.5.3"
   },
   "engines": {
-    "node": "200.x"
+    "node": "13.x"
   }
 }
