--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "discord.js": "11.4.2",
     "express": "^4.17.1",
-    "ytdl-core": "^0.29.0",
+    "ytdl-core": "^4.9.1",
     "discord.js-v12": "^12.5.3"
   },
   "engines": {
+    "node": "12.x"
   }
 }
