--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
-  "version": "2.1.0",
+  "name": "glitch-hello-node",
+  "version": "0.0.1",
+  "description": "acc rep by jano",
   "main": "jano.js",
   "scripts": {
     "start": "node jano.js"
   },
   "dependencies": {
+    "fastify": "^3.28.0",
+    "fastify-formbody": "^5.2.0",
+    "fastify-static": "^4.6.1",
+    "handlebars": "^4.7.7",
+    "point-of-view": "^5.2.0",
+    "discord.js-v12": "^12.5.3",
     "discord.js": "11.4.2",
-    "express": "^4.17.1",
-    "ytdl-core": "^4.9.1",
-    "discord.js-v12": "^12.5.3"
+    "ytdl-core": "^4.11.0",
+    "anti-spam": "^0.2.7",
+    "common-tags": "^1.8.2",
+    "canvas": "^2.9.1",
+    "discord-anti-spam": "^2.7.3",
+    "moment": "^2.29.2",
+    "ms": "^2.1.3",
+    "npm": "^8.6.0"
   },
   "engines": {
     "node": "12.x"
-  }
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/glitch-hello-node"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
